--- a/scss/tags-input.scss
+++ b/scss/tags-input.scss
@@ -1,7 +1,7 @@
 @import "mixins";
 @import "variables";
 
-tags-input {
+cm-tags-input {
   .tags {
     -moz-appearance: textfield;
     -webkit-appearance: textfield;
