--- a/scss/auto-complete.scss
+++ b/scss/auto-complete.scss
@@ -1,7 +1,7 @@
 @import "mixins";
 @import "variables";
 
-tags-input .autocomplete {
+cm-tags-input .autocomplete {
   margin-top: 5px;
   position: absolute;
   padding: 5px 0;
