--- a/templates/tags-input.html
+++ b/templates/tags-input.html
@@ -1,11 +1,11 @@
-<div class="host" tabindex="-1" ng-click="eventHandlers.host.click()" ti-transclude-append>
+<div class="host" tabindex="-1" ng-click="eventHandlers.host.click()" cm-ti-transclude-append>
   <div class="tags" ng-class="{focused: hasFocus}">
     <ul class="tag-list">
       <li class="tag-item"
           ng-repeat="tag in tagList.items track by track(tag)"
           ng-class="getTagClass(tag, $index)"
           ng-click="eventHandlers.tag.click(tag)">
-        <ti-tag-item scope="templateScope" data="::tag"></ti-tag-item>
+        <cm-ti-tag-item scope="templateScope" data="::tag"></cm-ti-tag-item>
       </li>
     </ul>
     <input class="input"
@@ -19,7 +19,7 @@
            ng-trim="false"
            ng-class="{'invalid-tag': newTag.invalid}"
            ng-disabled="disabled"
-           ti-bind-attrs="{type: options.type, placeholder: options.placeholder, tabindex: options.tabindex, spellcheck: options.spellcheck}"
-           ti-autosize>
+           cm-ti-bind-attrs="{type: options.type, placeholder: options.placeholder, tabindex: options.tabindex, spellcheck: options.spellcheck}"
+           cm-ti-autosize>
   </div>
 </div>
